package com.qwest.backend.domain.util;

public enum AuthorRole {
    TRAVELER, // User
    HOST,     // Host
    FOUNDER   // Admin
}
