package com.qwest.backend.domain.util;

public enum PropertyType {
    APARTMENT, HOTEL, CONDO, CABIN, TOWNHOUSE, PENTHOUSE, COTTAGE, BUNGALOW, LOFT
}
