package com.qwest.backend.domain.util;

public enum RentalFormType {
    ENTIRE_PLACE, PRIVATE_ROOM, HOTEL_ROOM, SHARED_ROOM
}